<resources>
    <string name="app_name">MyDetectionCataract</string>
    <string name="project_title">CatarAct</string>
    <string name="project_subtitle">Early Cataract Detection using Image Recognition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="register">Register</string>
    <string name="subheading_register">Mulai menjelajah dengan membuat akun Anda</string>
    <string name="username">Username</string>
    <string name="hint_username">Masukkan username</string>
    <string name="password">Kata Sandi</string>
    <string name="hint_password">Masukkan kata sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="hint_konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
    <string name="login_redirect">Sudah memiliki akun?</string>
    <string name="alert_register">Registrasi Berhasil</string>
    <string name="subheading_alert_register">Anda berhasil membuat akun baru</string>
    <string name="to_home">Menuju Beranda</string>
    <string name="masuk">Masuk</string>
    <string name="login">Login</string>
    <string name="subheading_login">Silakan masuk dengan akun yang telah terdaftar</string>
    <string name="register_redirect">Belum memiliki akun?</string>
    <string name="alert_login">Login Berhasil</string>
    <string name="subheading_alert_login">Selamat, Anda telah berhasil masuk</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="name">Nama</string>
    <string name="hint_name">John Doe</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="hint_phone">0812 3456 7890</string>
    <string name="detection">Deteksi</string>
    <string name="img_preview">Image preview</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="instruction">Petunjuk Penggunaan</string>
    <string name="instruction_desc">Tekan tombol \'Kamera\', lalu arahkan kamera ke depan mata. Untuk prediksi yang lebih akurat, dekatkan kamera ke depan mata dengan jarak sekitar 10 cm.</string>
    <string name="result_detection">Hasil Deteksi</string>
    <string name="result">KATARAK/NORMAL</string>
    <string name="result_desc">Deteksi menunjukkan bahwa kondisi mata Anda %1s dengan tingkat kepercayaan %.1f%.</string>
    <string name="history">Riwayat Deteksi</string>
    <string name="history_title">Pendeteksian</string>
    <string name="history_hasil">Hasil:</string>
    <string name="history_normal_cataract">Normal</string>
    <string name="history_persentance">Tingkat Akurasi:</string>
    <string name="detail_history">Detail Riwayat</string>
    <string name="greetings">Halo,</string>
    <string name="greetings_desc">Selalu jaga kesehatan mata ya!</string>
    <string name="article_for_you">Artikel Untukmu</string>
    <string name="see_all">Lihat Semua</string>
    <string name="doctor_pointing_fingers">Doctor pointing fingers</string>
    <string name="check_eyes_health">Cek kesehatan matamu!</string>
    <string name="open_detection">Buka pendeteksi katarak</string>
    <string name="article_image_desc">Article image</string>
    <string name="placeholder_title">Apa itu Katarak?</string>
    <string name="placeholder_writer">Admin</string>
    <string name="popular_article">Artikel Populer</string>
    <string name="personalized_article">Artikel Untukmu</string>
    <string name="placeholder_desc">Katarak adalah suatu kondisi di mana lensa mata menjadi keruh dan menyebabkan penglihatan menjadi buram.</string>
    <string name="article_detail">Detail Artikel</string>
    <string name="persen">xx%</string>
    <string name="onboarding_background">medical equipment background</string>
    <string name="no_data">Tidak ada data</string>
    <string name="no_history">Belum ada riwayat deteksi</string>
    <string name="open_detection_from_history">Buka pendeteksi katarak</string>
    <string name="setting">Setting</string>
    <string name="theme">Tema Aplikasi</string>
    <string name="logout_from_account">Keluar dari akun</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Ganti tema aplikasi</string>
</resources>