<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    tools:context=".dashboard.DetailArticleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical">

    <TextView
        style="@style/Heading"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/article_detail"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/preview_image"
        android:contentDescription="@string/img_preview" />

    <TextView
        android:id="@+id/title"
        style="@style/Heading"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/placeholder_title" />

    <TextView
        android:id="@+id/writer"
        style="@style/SubHeading"
        android:textSize="16sp"
        android:text="@string/placeholder_writer"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/description"
        style="@style/TextRegular"
        android:text="@string/placeholder_desc"
        android:textSize="16sp"
        android:layout_marginBottom="64dp" />

    </LinearLayout>

</ScrollView>