<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".authentication.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp">

        <TextView
            style="@style/Heading"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <TextView
            style="@style/SubHeading"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:text="@string/subheading_login" />

        <TextView
            style="@style/TextSemiBold"
            android:textSize="18sp"
            android:text="@string/email"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                style="@style/TextRegular"
                android:drawableStart="@drawable/email_24px"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextSemiBold"
            android:textSize="18sp"
            android:text="@string/phone"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhone"
                style="@style/TextRegular"
                android:drawableStart="@drawable/phone_24px"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:padding="14dp"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextSemiBold"
            android:textSize="18sp"
            android:text="@string/password"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                style="@style/TextRegular"
                android:drawableStart="@drawable/lock_24px"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/TextSemiBold"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:text="@string/login" />

        <TextView
            style="@style/SubHeading"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/register_redirect" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alertSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="#80000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="32dp">


            <TextView
                android:id="@+id/textView"
                style="@style/Heading"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/alert_login" />

            <TextView
                android:id="@+id/textView2"
                style="@style/SubHeading"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:text="@string/subheading_alert_login" />

            <Button
                android:id="@+id/btnOk"
                style="@style/TextSemiBold"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="32dp"
                android:text="@string/to_home" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>