<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".onboarding.SplashScreen1Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorSurfaceContainer"
        android:contentDescription="@string/onboarding_background"
        android:src="@drawable/onboard" />

    <TextView
        style="@style/Heading"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/project_title" />

    <TextView
        style="@style/SubHeading"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:text="@string/project_subtitle" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:visibility="visible" />

</LinearLayout>