<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DetectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="32dp">
    <TextView
        android:id="@+id/textView"
        style="@style/Heading"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/detection"
        android:layout_marginBottom="20dp"/>

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:background="?attr/colorOnSurfaceInverse">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/preview_image"
                android:contentDescription="@string/img_preview" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#80000000"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="visible" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/camera"
                style="@style/TextSemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/camera"
                app:icon="@drawable/camera_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/galery"
                app:layout_constraintWidth_default="spread"/>

            <Button
                android:id="@+id/galery"
                style="@style/TextSemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/gallery"
                app:icon="@drawable/gallery_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/camera"
                app:layout_constraintWidth_default="spread"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        style="@style/TextSemiBold"
        android:text="@string/instruction"
        android:textSize="16sp"
        android:layout_marginTop="20dp" />

    <TextView
        style="@style/TextRegular"
        android:text="@string/instruction_desc"
        android:textSize="16sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/deteksi"
        style="@style/TextSemiBold"
        android:layout_width="200dp"
        android:text="@string/detection" />

    </LinearLayout>

</ScrollView>