<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="4dp"
    card_view:cardElevation="0dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:background="?attr/colorSurfaceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/preview_image"
            android:contentDescription="@string/article_image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/item_name"
                style="@style/TextSemiBold"
                android:textSize="14sp"
                android:textStyle="bold"
                android:maxLines="3"
                android:layout_gravity="start"
                android:text="@string/placeholder_title" />

            <TextView
                android:id="@+id/item_writer"
                style="@style/TextSemiBold"
                android:textSize="12sp"
                android:lines="1"
                android:layout_gravity="start"
                android:layout_marginVertical="4dp"
                android:text="@string/placeholder_writer" />

            <TextView
                android:id="@+id/item_description"
                style="@style/TextRegular"
                android:textSize="12sp"
                android:lines="1"
                android:layout_gravity="start"
                android:text="@string/placeholder_desc" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>