<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="8dp"
    card_view:cardCornerRadius="16dp">

    <LinearLayout
        android:background="?attr/colorSurfaceContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/preview_image"
            android:contentDescription="@string/article_image_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/item_name"
                style="@style/TextSemiBold"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:text="@string/placeholder_title" />

            <TextView
                android:id="@+id/item_writer"
                style="@style/TextRegular"
                android:textSize="12sp"
                android:layout_gravity="start"
                android:lines="1"
                android:text="@string/placeholder_writer" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>