<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".dashboard.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardHistory"
        android:paddingHorizontal="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textView"
            style="@style/Heading"
            android:text="@string/history"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/card_history" />

        <LinearLayout
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="610dp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/no_data"
                android:contentDescription="@string/no_data" />

            <TextView
                style="@style/TextSemiBold"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/no_history" />

            <TextView
                android:id="@+id/open_detection"
                style="@style/TextRegular"
                android:textColor="?attr/colorPrimary"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/open_detection_from_history" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>